core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_1.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: batches
---
[
    OpBatch {
        ops: [
            Add,
        ],
        indptr: [
            0,
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        groups: [
            34,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        num_groups: 1,
    },
]
