core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_2.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: batches
---
[
    OpBatch {
        ops: [
            Add,
            Mul,
        ],
        indptr: [
            0,
            2,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        groups: [
            4514,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        op_counts: [
            2,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        num_groups: 1,
    },
]
