core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_3.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: batches
---
[
    OpBatch {
        ops: [
            Add,
            Push(
                12345678,
            ),
        ],
        indptr: [
            0,
            2,
            2,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        padding: [
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
        ],
        groups: [
            11682,
            12345678,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        num_groups: 2,
    },
]
