core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_4-2.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: "build_group_chunks(&batches).collect::<Vec<_>>()"
---
[
    [
        Push(
            1,
        ),
        Push(
            2,
        ),
        Push(
            3,
        ),
        Push(
            4,
        ),
        Push(
            5,
        ),
        Push(
            6,
        ),
        Push(
            7,
        ),
        Add,
    ],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
]
