core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_4.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: batches
---
[
    OpBatch {
        ops: [
            Push(
                1,
            ),
            Push(
                2,
            ),
            Push(
                3,
            ),
            Push(
                4,
            ),
            Push(
                5,
            ),
            Push(
                6,
            ),
            Push(
                7,
            ),
            Add,
        ],
        groups: [
            19543672004996571,
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        ],
        op_counts: [
            8,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        num_groups: 8,
    },
]
