core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_5.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: batches
---
[
    OpBatch {
        ops: [
            Add,
            Mul,
            Push(
                1,
            ),
            Push(
                2,
            ),
            Push(
                3,
            ),
            Push(
                4,
            ),
            Push(
                5,
            ),
            Push(
                6,
            ),
            Add,
        ],
        indptr: [
            0,
            9,
            9,
            9,
            9,
            9,
            9,
            9,
            9,
        ],
        padding: [
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
        ],
        groups: [
            2501590016639553954,
            1,
            2,
            3,
            4,
            5,
            6,
            0,
        ],
        num_groups: 8,
    },
    OpBatch {
        ops: [
            Push(
                7,
            ),
        ],
        indptr: [
            0,
            1,
            1,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        padding: [
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
        ],
        groups: [
            91,
            7,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        num_groups: 2,
    },
]
