core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_6.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: batches
---
[
    OpBatch {
        ops: [
            Add,
            Mul,
            Add,
            Push(
                7,
            ),
            Add,
            Add,
            Push(
                11,
            ),
            Mul,
            Mul,
            Add,
        ],
        groups: [
            2542120439479046562,
            7,
            11,
            34,
            0,
            0,
            0,
            0,
        ],
        op_counts: [
            9,
            0,
            0,
            1,
            0,
            0,
            0,
            0,
        ],
        num_groups: 4,
    },
]
